Corrección directorios de imágenes

--- a/main/about.html
+++ b/main/about.html
@@ -9,14 +9,14 @@
 
     <header>
         <h1 id="titulo" class="titulos" >Mighty Ducks Hockey League</h1>
-        <img src="/sprint1/resources/logo_mighty_duck.png" title="Logo" alt="Logo representativo de la 'Mighty Ducks Hockey League'" width="150">
+        <img src="/resources/logo_mighty_duck.png" title="Logo" alt="Logo representativo de la 'Mighty Ducks Hockey League'" width="150">
         <nav>
             <a href="./index.html"> Home </a>| About MDHL |<a href="./contact.html"> contact </a>
         </nav>
     </header>
 
     <main>
-        <img src="/sprint1/resources/hockey2.jpg" title="hockey2" alt="jugador controlando el disco con un palo de hockey" width="250">
+        <img src="/resources/hockey2.jpg" title="hockey2" alt="jugador controlando el disco con un palo de hockey" width="250">
         <div>
             <article>
                 <header>
