--- a/main/index.html
+++ b/main/index.html
@@ -9,14 +9,14 @@
 
     <header>
         <h1 id="titulo" class="titulos" >Mighty Ducks Hockey League</h1>
-        <img src="/sprint1/resources/logo_mighty_duck.png" title="Logo" alt="Logo representativo de la 'Mighty Ducks Hockey League'" width="150">
+        <img src="/resources/logo_mighty_duck.png" title="Logo" alt="Logo representativo de la 'Mighty Ducks Hockey League'" width="150">
         <nav>
             Home |<a href="./about.html"> About MDHL </a>|<a href="./contact.html"> contact </a>
         </nav>
     </header>
 
     <main>
-        <img src="/sprint1/resources/hockey1.jpg" title="hockey1" alt="jugador de hockey sosteniendo su casco" width="250">
+        <img src="/resources/hockey1.jpg" title="hockey1" alt="jugador de hockey sosteniendo su casco" width="250">
         <section>
             <h2 id="subtitulo" class="titulos">Upcoming Events</h2>
             <article>
